[tool.poetry]
name = "voice-changer"
version = "0.1.0"
description = ""
authors = ["Keitaro Oguri"]
license = "MIT"
readme = "README.md"
packages = [{include = "voice_changer"}]

# https://github.com/w-okada/voice-changer/blob/04c009416ab1cf6d6c232eb0b2d62b691bad7ec3/server/requirements.txt
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {version = "*", index = "downloadpytorch"}
pyworld = "*"
transformers = "*"
argh = "*"
safetensors = "*"
librosa = "*"
praat-parselmouth = "*"
pyaudio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
